# Bamboozle

./: .clang-format  .gitignore  .gitmodules  Bubble.sln  generate-compile-commands.bat  premake5.lua
Bamboozle/: CMakeLists.txt
Bamboozle/src/Bamboozle/: Application.cpp  Application.h  Assert.h  Atlas.cpp  Atlas.h  CameraController.cpp  CameraController.h  Core.h  DebugPanel.cpp  DebugPanel.h  DirectionalLight.h  EntryPoint.h  Filesystem.cpp  Filesystem.h  Hash.h  Helpers.h  Input.h  InputImpl.cpp  InputImpl.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Ref.h  Resource.h  ResourceSystem.cpp  ResourceSystem.h  ShaderPassTypes.h  Sprite.cpp  Sprite.h  Transformable.cpp  Transformable.h  Window.h  WindowImpl.cpp  WindowImpl.h  bbzl.h  (+1 more)
Bamboozle/src/Bamboozle/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Bamboozle/src/Bamboozle/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Bamboozle/src/Bamboozle/Renderer/: Buffer.cpp  Buffer.h  DescriptorSetLayout.h  Device.cpp  Device.h  DeviceExecutionContext.cpp  DeviceExecutionContext.h  DeviceExecutionContextFwd.h  DeviceFwd.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PipelineState.cpp  PipelineState.h  RenderAPI.cpp  RenderAPI.h  RenderCommand.cpp  RenderCommand.h  RenderPass.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Shader.h  ShaderPass.cpp  ShaderPass.h  ShaderPassConfig.h  Shaders.cpp  Shaders.h  Skybox.cpp  Skybox.h  Texture.cpp  (+9 more)
Bamboozle/src/Bamboozle/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h
Bamboozle/src/Platform/OpenGL/: GlCall.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLDevice.cpp  OpenGLDevice.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLPipelineState.cpp  OpenGLPipelineState.h  OpenGLRenderAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLShaders.cpp  OpenGLShaders.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGlRenderAPI.backup.txt.txt  OpenGlRenderAPI.cpp
Bamboozle/src/Platform/Vulkan/: PipelineLayout.h  TestVertex.h  VKCall.h  VulkanCommandBuffer.h  VulkanCommandBufferPool.cpp  VulkanCommandBufferPool.h  VulkanContext.cpp  VulkanContext.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDevice.cpp  VulkanDevice.h  VulkanDeviceExecutionContext.cpp  VulkanDeviceExecutionContext.h  VulkanPipelineState.cpp  VulkanPipelineState.h  VulkanRenderAPI.cpp  VulkanRenderAPI.h  VulkanShader.cpp  VulkanShader.h  VulkanShaders.cpp  VulkanShaders.h  VulkanSurfaceData.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanUniformBuffer.h  vkDescriptorPool.cpp  vkDescriptorPool.h  vkDescriptorSets.cpp  vkDescriptorSets.h  vkDevice.cpp  vkDevice.h  vkExecutionContext.cpp  vkExecutionContext.h  vkPipelineState.cpp  vkPipelineState.h  vkShaderPassCfg.cpp  vkShaderPassCfg.h
Bubble/: Bubble.vcxproj  Bubble.vcxproj.filters  CMakeLists.txt
Bubble/src/: Bubble.h  Test.cpp  Test.h  bubblepch.h
Bubble/src/Bubble/: Application.cpp  Application.h  CameraController.cpp  CameraController.h  Core.h  EntryPoint.h  Hash.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Window.h  bubblepch.h
Bubble/src/Bubble/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Bubble/src/Bubble/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Bubble/src/Bubble/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  RenderAPI.cpp  RenderAPI.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  Shaders.cpp  Shaders.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Bubble/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRenderAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLShaders.cpp  OpenGLShaders.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGlRenderAPI.cpp
Bubble/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Butterfly/: CMakeLists.txt
Butterfly/src/: Butterfly.h
Butterfly/src/Butterfly/: Application.cpp  Application.h  CameraController.cpp  CameraController.h  Core.h  DirectionalLight.cpp  DirectionalLight.h  EntryPoint.h  Filesystem.cpp  Filesystem.h  Hash.h  Input.h  InputImpl.cpp  InputImpl.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Object3D.cpp  Object3D.h  PerspectiveCameraController.cpp  PerspectiveCameraController.h  PointLight.cpp  PointLight.h  Scene.cpp  Scene.h  Transformable.cpp  Transformable.h  Window.h  WindowImpl.cpp  WindowImpl.h  butterflypch.h
Butterfly/src/Butterfly/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Butterfly/src/Butterfly/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Butterfly/src/Butterfly/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object3D.cpp  Object3D.h  OrthographicCamera.cpp  OrthographicCamera.h  OthographicCamera.cpp  PerspectiveCamera.cpp  PerspectiveCamera.h  RenderAPI.cpp  RenderAPI.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.h  (+12 more)
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  imgui.ini
Sandbox/renderer2D/: default_shader.glsl
Sandbox/res/: default_shader.glsl  lines_shader.glsl  skybox_shader.glsl
Sandbox/res/common/: desc.json
Sandbox/res/shaders/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
Sandbox/src/: App.cpp  Application.cpp  Editor.cpp  Editor.h  Helpers.cpp  Helpers.h  Sandbox2D.cpp  Sandbox2D.h  Sandbox3D.cpp  Sandbox3D.h  SceneUITools.cpp  SceneUITools.h
(+50 files in other folders)
